--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 	z-index: 3;
 }
 
-#intro-info {
+#intro-paragraph {
 	background-color: lightgray;
 	font-family: Times, serif, Arial;
 	text-align: center;
