--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 	text-align: center;
 	font-family: Times;
 	width: 300px;
-  	border: 15px green;
-  	padding: 50px;
+  	border: 15px solid blue;
+  	padding: 10px;
  	margin: 20px;
 }
 
