--- a/styles/style.css
+++ b/styles/style.css
@@ -223,9 +223,9 @@ footer {
     width: 50%;
 } 
 
-#number-of-display-songs::after {
+/* #number-of-display-songs::after {
 
-}
+} */
 
 #hasToken::before {
     width: 45px;
