Transfer ArtistSearch to backend
Transferred the API call for artist by name to the backend

--- a/styles/style.css
+++ b/styles/style.css
@@ -220,7 +220,7 @@ footer {
     margin-top: 40px;
 }
 
-#number-of-display-songs {
+#artist-search-bar {
     display: block;
     margin: 0 auto;
     width: 50%;
