--- a/styles/style.css
+++ b/styles/style.css
@@ -210,6 +210,13 @@ footer {
     top: 200;
 }
 
+#search-error {
+    padding-top: 5px;
+    color: red;
+    text-align: center;
+
+}
+
 #test-list-section {
     text-align: justify;
     background-color: lightgray;
