--- a/styles/style.css
+++ b/styles/style.css
@@ -252,3 +252,9 @@ footer {
     transform: translate(5px, 14px);
 }
 
+form {
+    border: 3px solid #f1f1f1;
+    max-width: 15%;
+    margin: auto;
+    justify-content: center;
+  }
