--- a/styles/style.css
+++ b/styles/style.css
@@ -283,14 +283,19 @@ form {
     margin-bottom: 20px;
 }
 
-#signup-error {
-    width: 20%;
+.log-sign-error {
+    width: 25%;
     margin: auto;
     margin-top: 1em;
-    justify-content: center;
+    text-align: center;
+    font-weight:bolder;
 }
 
 label {
     width: 50%;
     margin: auto;
+}
+
+.page-header {
+    text-align: center;
 }
