--- a/styles/style.css
+++ b/styles/style.css
@@ -139,7 +139,7 @@ p {
     display: inline-block;
     margin-right: 2rem;
     border-radius: 1rem;
-    transition: padding 0.75s, background-color 1.5s, border-radius;
+    transition: padding 0.75s, background-color 1.5s, border-radius 1s;
 }
 
 .left-nav-ul li:hover {
@@ -168,10 +168,9 @@ section {
     padding-bottom: 5rem;
 }
 
-h1,
-h2 {
+
+h1 {
     font-weight: normal;
-    margin-bottom: 10px;
 }
 
 .button {
@@ -239,7 +238,7 @@ footer {
 }
 
 #technologies-div {
-    background: linear-gradient(to right, lightgray 0%, white 50%, lightgray 100%);
+    /* background: linear-gradient(to right, lightgray 0%, white 50%, lightgray 100%); */
 }
 
 .technologies-tab {
@@ -310,4 +309,22 @@ footer {
     justify-content: center;
     align-items: center;
     
+}
+
+.project-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    border-radius: 1rem;
+    width: 35%;
+    padding: 1rem;
+    padding-top: 0.5rem;
+    background-color: #222;
+    color: white;
+}
+
+.flex {
+    display: flex;
 }
